# ninjamomentumrecon

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindMcs.cmake
data/: emulsion_range.root
data/connection/: t2l_ET_ECC.json  t2l_ET_ECC_fe.json  t2l_ET_ECC_fe_fe.json  t2l_black_fe.json  t2l_black_re_fe.json  t2l_black_re_fe_fe.json  t2l_black_re_fe_water.json  t2l_black_water.json  t2l_fe.json  t2l_fe_fe.json  t2l_fe_fe_fe.json  t2l_fe_water.json  t2l_fe_water_fe.json  t2l_re_ET_ECC_fe_fe_fe.json  t2l_re_ET_ECC_fe_fe_fe_fe.json  t2l_re_ET_ECC_fe_fe_fe_water.json  t2l_re_ET_ECC_fe_fe_water.json  t2l_re_fe.json  t2l_re_fe_fe.json  t2l_re_fe_fe_fe.json  t2l_re_fe_fe_fe_fe.json  t2l_re_fe_water.json  t2l_re_fe_water_fe.json  t2l_re_fe_water_fe_water.json  t2l_water.json
data/efficiency/: efficiency_ecc5.txt
data/fiducial/: fa_new_mfile_local_ecc5.txt
data/match/: tracker_efficiency.root
data/pid/: likelihood_param.txt  vph_func_param.txt
data/pion/: emulsion_range.root  iron_range.root  polystyrene_range.root  water_range.root
data/proton/: iron_range.root  polystyrene_range.root  water_range.root
lib/: AbsorberMaterial_Emulsion_NINJA_Run6.h  CMakeLists.txt  ConnectionClass.cpp  ConnectionClass.hpp  ConnectionData.cpp  ConnectionData.hpp  ConnectionFunction.cpp  ConnectionFunction.hpp  MatchData.cpp  MatchData.hpp  MatchFunction.cpp  MatchFunction.hpp  McsClass.cpp  McsClass.hpp  McsConst.hpp  McsFunction.cpp  McsFunction.hpp  PDG.h  PidClass.cpp  PidClass.hpp  PidData.cpp  PidData.hpp  PidFunction.cpp  PidFunction.hpp  RangeFunction.cpp  RangeFunction.hpp  RangeSpline.cpp  RangeSpline.hpp
macro/: CheckAlphaDifference.C  CheckAngleResAngle.C  CheckAngleResMomentum.C  CheckBiasWidth.C  CheckEneDep.C  CheckHighland.C  CheckInitialBias.C  CheckInitialBiasAlphaCut.C  CheckInitialRecon.C  CheckNonTime.C  CheckSTune.C  CheckSmearEffect.C  DrawAngleResAng.C  DrawAngleResMom.C  DrawBmMcs.C  DrawEnedep.C  DrawSTune.C  GetMomentumDrop.C
src/: CMakeLists.txt  McsAngleMethod.cpp  McsAngleMethod.hpp  McsCommon.cpp  McsCommon.hpp  McsCoordinateMethod.cpp  McsCoordinateMethod.hpp  main.cpp
src/EnergyDeposit/: .#AngleSmearCheck.cpp  .#MinimizerTest.cpp  BetheBlochCheck.cpp  BetheBlochCheck.cpp.bak  CMakeLists.txt  DeltaTheta.cpp  DeltaThetaLatCheck.cpp  EnergyDeposit.cpp  MinimizerTest.cpp  MinimizerTest.cpp.bak.20220520  MinimizerTest.hpp  MinimizerTestMomch.cpp  MinimizerTestMomch.cpp.bak  MinimizerTestMomchMaterial.cpp  MinimizerTestMomchMaterialLarge.cpp
src/FileConvert/: AddBabyMindToChain.cpp  AddBabyMindToChainMcBase.cpp  CMakeLists.txt  DailyMergeMomChain.cpp  DailySeparateMomChain.cpp  DailySeparateMomChain.cpp.bak  FileConvert.cpp  FileConvert.hpp  FileConvertNonTime.cpp  FileReConvert.cpp  FileReConvertNonTime.cpp  MCOutputToChain.cpp  MomchDataPlot.cpp  NuFactEmergency.cpp  NuFactHistogram.cpp  Phd0pi1p.cpp  Phd0pi2p.cpp  Phd1pi0p.cpp  PhdThesisHistogram.cpp  PhdThesisHistogram0pi.cpp
src/MomentumConsistency/: CMakeLists.txt  MomentumConsistency.cpp
src/ParticleId/: CMakeLists.txt  PidRange.cpp
src/Performance/: BMRangeEccMcs.cpp  CMakeLists.txt
src/RangeMethod/: CMakeLists.txt  RangeEnergyDepositCheck.cpp  RangeMethod.cpp  RangeMethodMomch.cpp  TestReadOut.cpp
tools/: CMakeLists.txt  CompareTwoMomch.cpp  MomChainTextIO.cpp  TestPidHist.cpp  TestPidLine.cpp
